# fake-git-history

./: LICENSE  README.md  pyproject.toml
fake-git-history/: __main__.py  cli.py
fake_git_history/: __init__.py  __main__.py  cli.py
